--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MEAN starter project based on hackathon hacker starter file",
   "main": "app.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,27 @@
   "bugs": {
     "url": "https://github.com/rmfranciacastillo/mean-starter/issues"
   },
-  "homepage": "https://github.com/rmfranciacastillo/mean-starter#readme"
+  "homepage": "https://github.com/rmfranciacastillo/mean-starter#readme",
+  "devDependencies": {
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
