--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "chalk": "^2.4.2",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "path": "^0.12.7"
