--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,21 @@
 version: '3'
 services:
   mongo:
-    image: mongo:4.0
-  web:
+    container_name: mongo
+    image: mongo:4
+    ports: 
+     - "27018:27017"
+
+  app:
+    container_name: docker-node-mongo
+    restart: always
     build: .
     ports:
      - "8080:8080"
-    environment:
-     - MONGODB_URI=mongodb://mongo:27017/mean-test
     links:
      - mongo
     depends_on:
      - mongo
     volumes:
-     - .:/starter
-     - /starter/node_modules
+     - .:/usr/src/mean-starter
+     - /usr/src/mean-starter/node_modules
