--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MEAN starter project based on hackathon hacker starter file",
   "main": "app.js",
   "scripts": {
-  	"start": "node app.js",
+    "start": "node app.js",
     "test": "npm test",
     "lint": "eslint ."
   },
@@ -44,11 +44,17 @@
     }
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
     "chalk": "^2.4.2",
+    "chart.js": "^2.8.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "morgan": "^1.9.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "popper.js": "^1.14.7",
+    "pug": "^2.0.3"
   }
 }
