--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "chart.js": "^2.8.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-status-monitor": "^1.2.3",
     "jquery": "^3.3.1",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "popper.js": "^1.14.7",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "request": "^2.88.0"
   }
 }
