--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "express-status-monitor": "^1.2.3",
     "jquery": "^3.3.1",
     "morgan": "^1.9.1",
+    "node-sass": "^4.11.0",
+    "node-sass-middleware": "^0.11.0",
     "path": "^0.12.7",
     "popper.js": "^1.14.7",
     "pug": "^2.0.3",
