--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
   },
   "homepage": "https://github.com/rmfranciacastillo/mean-starter#readme",
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^5.15.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.5"
+    "lint-staged": "^8.1.5",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.1",
+    "nyc": "^14.1.1",
+    "supertest": "^4.0.2"
   },
   "lint-staged": {
     "*.js": [
