--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "export NODE_ENV=development || SET NODE_ENV=development && nodemon --exec npm start",
     "test": "npm test",
     "lint": "eslint ."
   },
@@ -53,6 +54,8 @@
     "express": "^4.16.4",
     "express-status-monitor": "^1.2.3",
     "jquery": "^3.3.1",
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.1",
     "morgan": "^1.9.1",
     "node-sass": "^4.11.0",
     "node-sass-middleware": "^0.11.0",
