--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MEAN starter project based on hackathon hacker starter file",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "dev": "export NODE_ENV=development || SET NODE_ENV=development && nodemon --exec npm start",
     "test": "npm test",
     "lint": "eslint ."
