--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "export NODE_ENV=development || SET NODE_ENV=development && nodemon --exec npm start",
-    "test": "npm test",
+    "test": "export NODE_ENV=test || SET NODE_ENV=test && nyc mocha *.test.js --timeout=1000 --exit",
+    "watch-test": "nodemon --exec npm test",
     "lint": "eslint ."
   },
   "repository": {
@@ -30,6 +31,7 @@
     "eslint": "^5.15.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-node": "^8.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
