--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "export NODE_ENV=development || SET NODE_ENV=development && nodemon --exec npm start",
     "test": "export NODE_ENV=test || SET NODE_ENV=test && nyc mocha *.test.js --timeout=1000 --exit",
     "watch-test": "nodemon --exec npm test",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint-setup": "eslint -c"
   },
   "repository": {
     "type": "git",
@@ -41,7 +42,7 @@
     "supertest": "^4.0.2"
   },
   "lint-staged": {
-    "app.js": [
+    "server.js": [
       "eslint --fix",
       "git add"
     ],
