--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-PORT=8080
-MONGODB_URI=mongodb://localhost:27017/mean-development
+PORT=5000
+MONGODB_URI=mongodb://localhost:27017/mean-development-dev
 
