--- a/package.json
+++ b/package.json
@@ -58,15 +58,19 @@
     "body-parser": "^1.18.3",
     "chalk": "^2.4.2",
     "chart.js": "^2.8.0",
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-status-monitor": "^1.2.3",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.1",
     "morgan": "^1.9.1",
     "node-sass": "^4.11.0",
     "node-sass-middleware": "^0.11.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "popper.js": "^1.14.7",
     "pug": "^2.0.3",
